--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <meta property="og:title" content="Personal Course Home Page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./images/idahorainbow.jpeg">
-    <meta property="og:url" content="https://cupofvilatte.github.io/wdd231/">
+    <meta property="og:image" content="./images/catedral_laplata.jpg">
+    <meta property="og:url" content="https://franncardenas.github.io/wdd231/">
 
     <meta name="twitter:title" content="Personal Course Home Page">
     <meta name="twitter:description" content="Student portal for completed and in progress courses">
-    <meta name="twitter:image" content="./images/idahorainbow.jpeg">
+    <meta name="twitter:image" content="./images/catedral_laplata.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="icon" href="./images/wdd231favicon.ico">
+    <link rel="icon" href="./images/football_ball.ico">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/main-style.css">
     <script type="module" src="./scripts/courseHomePage.js"></script>
@@ -34,8 +34,8 @@
         <nav class="header-nav">
             <a class="home-link active" href="./index.html">Home</a>
             <a class="chamber-link" href="./chamber/index.html">Chamber</a>
-            <a class="github-link" href="#">GitHub Profile</a>
-            <a class="linkedin-link" href="#">LinkedIn</a>
+            <a class="github-link" href="https://github.com/franncardenas">GitHub Profile</a>
+            <a class="linkedin-link" href="https://www.linkedin.com/in/franco-cardenas/">LinkedIn</a>
         </nav>
     </header>
     <main>
@@ -51,17 +51,15 @@
         </section>
         <section id="location" class="home-page-section">
             <div class="section-title">
-                <h2>Rexburg, Idaho</h2>
+                <h2>La Plata, Buenos Aires</h2>
             </div>
-            <img src="./images/idahorainbow.jpeg" alt="image from the location">
-            <p>Dunes Double Rainbow</p>
+            <img src="./images/catedral_laplata.jpg" alt="image from the location" width="160" height="240">
+            <p>Cathedral of La Plata</p>
         </section>
         <section id="education-plan" class="home-page-section">
             <div class="section-title">
                 <h2>Web and Computer Programming Certificate</h2>
                 <p id="total-credits">Total Credits: </p>
-                <!-- <p id="credits-completed">Completed Credits: </p>
-                <p id="credits-remaining">Remaining Credits: </p> -->
             </div>
             <div id="course-categories">
                 <button>All</button>
@@ -69,18 +67,18 @@
                 <button>WDD</button>
             </div>
             <div id="course-tabs">
-                <!-- <button class="done">CSE 110</button>
+                <button class="done">CSE 110</button>
                 <button class="done">WDD 130</button>
                 <button class="done">CSE 111</button>
-                <button>CSE 210</button>
+                <button class="done">CSE 210</button>
                 <button class="done">WDD 131</button>
-                <button>WDD 231</button> -->
+                <button>WDD 231</button>
             </div>
         </section>
         <dialog id="course-details"></dialog>
     </main>
     <footer>
-        <p>&copy;<span id="currentyear"></span> Vilate Knapp - Idaho United States</p>
+        <p>&copy;<span id="currentyear"></span> Franco Cardenas, Argentina</p>
         <p id="lastModified"></p>
     </footer>
 </body>
