--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,25 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Directory Page</title>
+    <title>Buenos Aires Chamber of Commerce Home Page</title>
+
     <meta name="description" content="this is the home page for the course website">
     <meta name="author" content="Franco Cardenas">
 
-    <meta property="og:title" content="Personal Course Home Page">
+    <meta property="og:title" content="Buenos Aires Chamber of Commerce Home Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="./images/catedral_laplata.jpg">
     <meta property="og:url" content="https://franncardenas.github.io/wdd231/">
 
-    <meta name="twitter:title" content="Personal Course Home Page">
-    <meta name="twitter:description" content="Student portal for completed and in progress courses">
+    <meta name="twitter:title" content="Buenos Aires Chamber of Commerce Home Page">
+    <meta name="twitter:description" content="Main Page for Buenos Aires Chamber of Commerce">
     <meta name="twitter:image" content="./images/catedral_laplata.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="icon" href="./images/football_ball.ico">
 
     <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="./styles/chamber.css">
-    <script type="module" src="./scripts/directory.js"></script>
+    <link rel="stylesheet" href="./styles/mainStyle.css">
+    <link rel="stylesheet" href="./styles/index.css">
+
+    <script type="module" src="./scripts/chamberhome.js"></script>
 </head>
 
 <body>
@@ -43,18 +46,23 @@
         </div>
     </header>
     <main>
-        <div class="button-container">
-            <button class="view-toggle-button" id="grid-view">GRID</button>
-            <button class="view-toggle-button" id="list-view">LIST</button>
+        <div class="hero">
+            <img src="./images/Buenos-aires.jpg" alt="Buenos Aires City">
+            <a href="./join.html" id="join-now">JOIN NOW!</a>
         </div>
-        <section class="member-cards grid-view">
-            <div class="card">
-                <img class="company-logo" src="#" alt="company image">
-                <p class="company-name">company name</p>
-                <p class="address">1122 Booger Booger Ave</p>
-                <p class="phone-number">555-555-5555</p>
-                <a class="company-page" href="#">theirSite.com</a>
-            </div>
+        <section class="current-events">
+            <h2>Current Events</h2>
+            <ul>
+                <li>Formula 1 The Exhibition</li>
+                <li>Joaquín Sabina - "Hola y Adiós" Farewell Tour</li>
+                <li>Nuestros Caballos</li>
+                <li>Incubus Live Concert</li>
+            </ul>
+        </section>
+        <section class="weather">
+
+        </section>
+        <section class="spotlights">
         </section>
     </main>
     <footer>
